# SLF

./: .gitignore  LICENSE  README.md  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md  performance-issue.md  question.md
.github/workflows/: code-quality.yml  slf-tests.yaml  tests.yml
configs/: default.yaml
docs/: Makefile  report.aux  report.bib  report.out  report.tex
outputs/demo/: result_yellow-trapinsect-trap-2PY5PH6.json
scripts/: benchmark_table_metrics.py  generate_synthetic.py  run_demo.py
src/: __init__.py
src/augmentation/: __init__.py  synthetic_generator.py
src/detection/: __init__.py  descriptor_classifier.py  feature_filter.py  pipeline.py  preprocessor.py  region_proposer.py
src/utils/: __init__.py  io.py  visualization.py
tests/: test_descriptor_classifier.py  test_feature_filter.py  test_pipeline.py  test_preprocessor.py  test_region_proposer.py  test_run_demo.py
