[metadata]
name = slf-trap-detector
version = 1.0.0
description = Spotted Lanternfly detection in pheromone trap images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/YOUR-USERNAME/YOUR-REPO-NAME
author = Your Name
author_email = your.email@example.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.24.0
    scipy>=1.10.0
    scikit-learn>=1.3.0
    scikit-image>=0.21.0
    opencv-python>=4.8.0
    Pillow>=10.0.0
    matplotlib>=3.7.0
    PyYAML>=6.0
    numba>=0.57.0

[options.packages.find]
where = .
include = src*

[options.extras_require]
dev = 
    pytest>=7.4.0
    pytest-cov>=4.1.0
    black>=23.0.0
    flake8>=6.0.0
    isort>=5.12.0

[options.entry_points]
console_scripts =
    slf-demo = scripts.run_demo:main
    slf-benchmark = scripts.benchmark_table_metrics:main

[flake8]
max-line-length = 88
extend-ignore = E203, E501, W503
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    tests/fixtures/*

[isort]
profile = black
multi_line_output = 3
line_length = 88
known_first_party = src
